--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -31,13 +31,14 @@
 
   thead {
     th {
-      @extend %muted-heading;
+      @extend %default-text;
+      color: $color-mid-dark;
       line-height: map-get($line-heights, small);
       padding-bottom: $spv-inner--large - map-get($nudges, nudge--small);
     }
 
     tr {
-      border-bottom: 1px solid $color-dark;
+      border-bottom: 1px solid $color-mid-light;
       vertical-align: top;
     }
   }
@@ -57,6 +58,6 @@
   }
 
   %table-row-border {
-    border-top: 1px solid $color-mid-light;
+    border-top: 1px solid $color-mid-x-light;
   }
 }
