--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -79,8 +79,8 @@
 
   %search-box-input--light {
     //XXX: This should inherit from input color theming. Once that becomes available, delete this.
-    background-color: $colors--light-theme--background;
-    border-color: $colors--light-theme--border-high-contrast;
+    background-color: $colors--light-theme--input-background;
+    border-bottom-color: $colors--light-theme--border-high-contrast;
     color: $colors--light-theme--text-default;
 
     &:active,
@@ -91,8 +91,8 @@
     &:-webkit-autofill:focus,
     &:-internal-autofill-selected {
       // XXX: remove important once the button {} selector is refactored to use themeing. At the moment, it trumps these.
-      background-color: $colors--light-theme--background !important;
-      border-color: $colors--light-theme--border-high-contrast !important;
+      // background-color: $colors--light-theme--background !important;
+      border-bottom-color: $colors--light-theme--border-high-contrast !important;
     }
   }
 
@@ -111,7 +111,7 @@
     &:-internal-autofill-selected {
       // XXX: remove important once the button {} selector is refactored to use themeing. At the moment, it trumps these.
       background-color: $colors--dark-theme--background !important;
-      border-color: $colors--dark-theme--border-high-contrast !important;
+      border-bottom-color: $colors--dark-theme--border-high-contrast !important;
     }
   }
 
