--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -6,8 +6,9 @@ $color-link: #007aa6 !default;
 
 $color-x-light: #fff !default;
 $color-light: #f7f7f7 !default;
-$color-mid-x-light: #e5e5e5 !default;
+$color-mid-x-light: hsl(0, 0%, 88%) !default;
 $color-mid-light: #cdcdcd !default;
+$color-mid-mid: #cdcdcd;
 $color-mid: #999 !default;
 $color-mid-dark: #666 !default;
 $color-dark: #111 !default;
@@ -36,9 +37,10 @@ $states: (
 );
 
 $colors--light-theme--background: #fff !default;
+$colors--light-theme--input-background: #f7f7f7 !default;
 $colors--light-theme--background-highlighted: #f7f7f7 !default;
-$colors--light-theme--border-default: #cdcdcd !default;
-$colors--light-theme--border-high-contrast: #999 !default;
+$colors--light-theme--border-default: $color-mid-light !default;
+$colors--light-theme--border-high-contrast: $color-mid-light !default;
 $colors--light-theme--text-hover: #757575 !default;
 $colors--light-theme--text-disabled: #666 !default;
 $colors--light-theme--text-default: #111 !default;
