--- a/docs/examples/templates/maas-layout.html
+++ b/docs/examples/templates/maas-layout.html
@@ -126,83 +126,244 @@ category: _templates
         <button type="reset" class="p-search-box__reset" alt="reset"><i class="p-icon--close"></i></button>
         <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
       </form>
-      <table class="p-table--mobile-card">
-        <thead>
-          <tr>
-            <th>FQDN | MAC</th>
-            <th>Power</th>
-            <th>Status</th>
-            <th>Owner | Pool</th>
-            <th class="u-align--right">Cores</th>
-            <th class="u-align--right">RAM(GB)</th>
-            <th class="u-align--right">Disks</th>
-            <th class="u-align--right">Storage(GB)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-          <tr>
-            <th aria-label="FQDN | MAC">Machine 1</th>
-            <td aria-label="Power">Off</td>
-            <td aria-label="Status">Ready</td>
-            <td aria-label="Owner | Pool">Maria</td>
-            <td aria-label="Cores" class="u-align--right">8</td>
-            <td aria-label="RAM(GB)" class="u-align--right">16</td>
-            <td aria-label="Disks" class="u-align--right">2</td>
-            <td aria-label="Storage(GB)" class="u-align--right">2</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+      <table class="p-table--mobile-card u-truncate" role="grid">
+          <thead>
+            <tr role="row">
+              <th>FQDN</th>
+              <th>Power</th>
+              <th>Status</th>
+              <th>Owner</th>
+              <th>Zone</th>
+              <th class="u-align--right">Cores</th>
+              <th class="u-align--right">RAM</th>
+              <th class="u-align--right">Disks</th>
+              <th class="u-align--right">Storage</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN ">LongEnoughToCauseEllipsis</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed testing</td>
+              <td role="gridcell" aria-label="Owner">Caleb</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">4</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">2 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Allocated</td>
+              <td role="gridcell" aria-label="Owner">sparkiegeek</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">6</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">4 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">first-cattle</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed to enter rescue mode</td>
+              <td role="gridcell" aria-label="Owner">admin</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">8</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">16 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">3</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Broken</td>
+              <td role="gridcell" aria-label="Owner">&mdash;</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">2</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">1 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">LongEnoughToCauseEllipsis</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed testing</td>
+              <td role="gridcell" aria-label="Owner">Caleb</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">4</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">2 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Allocated</td>
+              <td role="gridcell" aria-label="Owner">sparkiegeek</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">6</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">4 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">first-cattle</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed to enter rescue mode</td>
+              <td role="gridcell" aria-label="Owner">admin</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">8</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">16 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">3</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Broken</td>
+              <td role="gridcell" aria-label="Owner">&mdash;</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">2</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">1 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">LongEnoughToCauseEllipsis</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed testing</td>
+              <td role="gridcell" aria-label="Owner">Caleb</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">4</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">2 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Allocated</td>
+              <td role="gridcell" aria-label="Owner">sparkiegeek</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">6</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">4 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">first-cattle</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed to enter rescue mode</td>
+              <td role="gridcell" aria-label="Owner">admin</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">8</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">16 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">3</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Broken</td>
+              <td role="gridcell" aria-label="Owner">&mdash;</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">2</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">1 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">LongEnoughToCauseEllipsis</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed testing</td>
+              <td role="gridcell" aria-label="Owner">Caleb</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">4</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">2 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Allocated</td>
+              <td role="gridcell" aria-label="Owner">sparkiegeek</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">6</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">4 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">first-cattle</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed to enter rescue mode</td>
+              <td role="gridcell" aria-label="Owner">admin</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">8</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">16 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">3</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Broken</td>
+              <td role="gridcell" aria-label="Owner">&mdash;</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">2</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">1 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">LongEnoughToCauseEllipsis</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed testing</td>
+              <td role="gridcell" aria-label="Owner">Caleb</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">4</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">2 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Allocated</td>
+              <td role="gridcell" aria-label="Owner">sparkiegeek</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">6</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">4 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">first-cattle</td>
+              <td role="gridcell" aria-label="Power">On</td>
+              <td role="gridcell" aria-label="Status">Failed to enter rescue mode</td>
+              <td role="gridcell" aria-label="Owner">admin</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">8</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">16 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">3</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+            </tr>
+            <tr role="row">
+              <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+              <td role="gridcell" aria-label="Power">Off</td>
+              <td role="gridcell" aria-label="Status">Broken</td>
+              <td role="gridcell" aria-label="Owner">&mdash;</td>
+              <td role="gridcell" aria-label="Zone">london</td>
+              <td class="u-align--right" role="gridcell" aria-label="Cores">2</td>
+              <td class="u-align--right" role="gridcell" aria-label="RAM">1 GiB</td>
+              <td class="u-align--right" role="gridcell" aria-label="Disks">1</td>
+              <td class="u-align--right" role="gridcell" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+            </tr>
+          </tbody>
+
+        </table>    </div>
   </div>
 </div>
 
