--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -79,12 +79,12 @@
   $button-background-color: $color-x-light,
   $button-text-color: $color-x-dark,
   $button-disabled-background-color: $color-transparent,
-  $button-disabled-border-color: $color-mid,
-  $button-border-color: $color-mid,
-  $button-hover-background-color: darken($color-x-light, 10%),
-  $button-hover-border-color: $color-mid,
-  $button-active-background-color: darken($color-x-light, 15%),
-  $button-active-border-color: $color-mid
+  $button-disabled-border-color: $color-mid-mid,
+  $button-border-color: $color-mid-mid,
+  $button-hover-background-color: $color-mid-x-light,
+  $button-hover-border-color: $color-mid-mid,
+  $button-active-background-color: $color-mid-x-light,
+  $button-active-border-color: $color-mid-mid
 ) {
   background-color: $button-background-color;
   border-color: $button-border-color;
