--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -1,5 +1,5 @@
 // Density multiplier
-$multi: 2 !default;
+$multi: 1 !default;
 
 // Options
 $pad-lists: true !default; // Adds padding to list items
@@ -90,7 +90,7 @@ $spv-inner--x-large: $sp-unit * 5.5;
 $spv-outer--small: $sp-unit !default; //labels
 $spv-outer--small-scaleable: $sp-unit * $multi !default;
 $spv-outer--medium: $sp-unit * 2 !default;
-$spv-outer--scaleable: $sp-unit * (1 + $multi) !default;
+$spv-outer--scaleable: $sp-unit * (3) !default;
 
 // 1.3 Vertical spacing between a group of components and its wrapper - strips, views, entire page
 $spv-outer--shallow-scaleable: $spv-outer--scaleable !default;
