--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -30,6 +30,12 @@
   }
 
   thead {
+    &::after {
+      // prevent border on header tr from disappearing when there is no tbody
+      // https://github.com/canonical-web-and-design/vanilla-framework/issues/2662
+      content: '';
+    }
+
     th {
       @extend %muted-heading;
       line-height: map-get($line-heights, small);
