--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -160,3 +160,6 @@ $sp-xx-large: $sp-unit * 5 !default;
 $sp-xxx-large: $sp-unit * 6 !default;
 $sp-xxxx-large: $sp-unit * 8 !default;
 $sp-xxxxx-large: $sp-unit * 12 !default;
+
+// width of white space added beteween inline and inline-block elements
+$strut-width: 4px !default;
