fix selector and space between inline list items

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -37,10 +37,9 @@ $spv-list-item--inner: null;
     margin-left: -#{$strut-width};
   }
 
-  &:not(:last-of-type),
-  &:not(.last-item) {
+  &:not(:last-of-type):not(.last-item) {
     &::after {
-      content: '\00a0';
+      content: '\00a0\00a0\00a0';
     }
   }
 }
