reduce nesting depth to avoid travis error

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -113,10 +113,8 @@ $spv-list-item--inner: null;
     .p-inline-list__item {
       @include vf-inline-list-item;
 
-      &:not(:last-of-type):not(.last-item) {
-        &::after {
-          content: '\00a0\2022\00a0';
-        }
+      &:not(:last-of-type):not(.last-item)::after {
+        content: '\00a0\2022\00a0';
       }
     }
   }
