pacing and smaller dot

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -114,7 +114,8 @@ $spv-list-item--inner: null;
       @include vf-inline-list-item;
 
       &:not(:last-of-type):not(.last-item)::after {
-        content: '\00a0\2022\00a0';
+        content: '\00a0\00a0\00b7\00a0\00a0';
+        margin-left: -#{$strut-width};
       }
     }
   }
