remove unnecesary margin indent

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -138,8 +138,8 @@ $spv-list-item--inner: null;
   .p-stepped-list {
     @extend %vf-clearfix;
     @extend %numbered-step-container;
-
     margin-bottom: 0; // spacing has been moved onto __item; this ensures that the heading / paragraph spacing matches that of regular headings / paragraphs
+    margin-left: 0;
   }
 
   .p-stepped-list__item {
