--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -518,6 +518,24 @@ $social-icon-size: map-get($icon-sizes, heading-icon--small);
   }
 }
 
+@mixin vf-p-icon-canonical {
+  @include deprecate('3.0.0', 'Removing icon from framework please use an alternative icon from our social set') {
+    .p-icon--canonical {
+      @extend %social-icon;
+      @include vf-icon-canonical;
+    }
+  }
+}
+
+@mixin vf-p-icon-ubuntu {
+  @include deprecate('3.0.0', 'Removing icon from framework please use an alternative icon from our social set') {
+    .p-icon--ubuntu {
+      @extend %social-icon;
+      @include vf-icon-ubuntu;
+    }
+  }
+}
+
 @mixin vf-p-icon-rss {
   .p-icon--rss {
     @extend %social-icon;
