--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -32,6 +32,8 @@ $social-icon-size: map-get($icon-sizes, heading-icon--small);
   @include vf-p-icon-instagram;
   @include vf-p-icon-linkedin;
   @include vf-p-icon-youtube;
+  @include vf-p-icon-canonical;
+  @include vf-p-icon-ubuntu;
   @include vf-p-icon-rss;
   @include vf-p-icon-email;
   @include vf-p-icon-sizes;
