fix middot position as it was in 2.3.0

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -30,7 +30,7 @@ $spv-list-item--inner: null;
 
 // Mixin for inline list items
 @mixin vf-inline-list-item {
-  display: inline-flex;
+  display: inline;
   list-style: none;
 
   &:not(:last-of-type),
